# bitrix24_google-API-

./: .env.template  README.md  api.py  button.py  config.py  etl.py  get_token.py  load_google.py  main.py  pyproject.toml  requirements.txt  schemas.py
services/: bitrix_service.py  google_service.py  request_service.py
