[tool.poetry]
name = "bitrix24-google-api-"
version = "0.1.0"
description = "Script for transferring data from Bitrix24 to Google spreadsheet"
authors = ["Di-Nov <pieero47@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
gspread = "^6.1.2"
oauth2client = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.custom]
package-mode = false